Add cache database config for Rails 8 Heroku production

--- a/config/database.yml
+++ b/config/database.yml
@@ -32,5 +32,10 @@ production:
     adapter: postgresql
     url: <%= ENV["DATABASE_URL"] %>
 
+  cache:
+    adapter: postgresql
+    url: <%= ENV["DATABASE_URL"] %>
+
+
 
      
